tests/rosetta/transpiler/Java/conditional-structures-7.java
public class Main {
    static String fetch_() {
        return "";
    }

    static void example7() {
        String x = String.valueOf(fetch_());
        if ((x.equals("cheese"))) {
            null;
        } else         if (someCondition()) {
            null;
        }
    }

    static boolean someCondition() {
        return false;
    }
    public static void main(String[] args) {
    }
}
